--- a/environments/contrail/install_vrouter_kmod.yaml
+++ b/environments/contrail/install_vrouter_kmod.yaml
@@ -100,6 +100,20 @@ parameters:
     default: {}
     description: Mapping of custom hostnames
     type: json
+  ComputeKernelArgs:
+    description: >
+      Space seprated list of Kernel args to be update to grub.
+      The given args will be appended to existing args of GRUB_CMDLINE_LINUX in file /etc/default/grub
+      Example: "intel_iommu=on default_hugepagesz=1GB hugepagesz=1G hugepages=1"
+    type: string
+    default: ""
+  HostIsolatedCoreList:
+    description: >
+      A list or range of physical CPU cores to be tuned.
+      The given args will be appended to the tuned cpu-partitioning profile.
+      Ex. HostCpusList: '4-12' will tune cores from 4-12
+    type: string
+    default: ""
 
 description: >
   This is an example showing how you can do firstboot configuration
@@ -148,6 +162,9 @@ resources:
             dpdk_hugepages=$dpdk_hugepages
             dpdk_coremask=$dpdk_coremask
             dpdk_driver=$dpdk_driver
+            kernel_args=$kernel_args
+            tuned_cores=$tuned_cores
+
             if [[ ${contrail_repo} ]]; then
               cat <<EOF > /etc/yum.repos.d/contrail.repo
             [Contrail]
@@ -193,9 +210,11 @@ resources:
               /sbin/sysctl --system
               modprobe uio
               pci_address=`ethtool -i ${phy_dpdk_int} |grep bus-info| awk '{print $2}' |tr -d ' '`
+              ### 
               if [[ ${vlan_dpdk_parent} ]]; then
                  pci_address=`ethtool -i ${vlan_dpdk_parent} |grep bus-info| awk '{print $2}' |tr -d ' '`
               fi
+              ### start bond_dpdk_int ### 
               if [[ ${bond_dpdk_int} ]]; then
                  bond_dpdk_int_member_list=$(echo ${bond_dpdk_int_members} | tr "," "\n")
                  cat <<EOF> /etc/sysconfig/network-scripts/ifcfg-${bond_dpdk_int}
@@ -238,6 +257,7 @@ resources:
               # save ip and mask before starting services, otherwise they are always emty
               # since dpdk device becomes non-network devices
               def_gw=''
+
               if [[ `ip route show | grep default | grep ${phy_dpdk_int}` ]]; then
                 def_gw=`ip route show | grep default | grep ${phy_dpdk_int} | awk '{print $3}'`
               fi
@@ -245,6 +265,7 @@ resources:
               mask=`ifconfig ${phy_dpdk_int} | grep 'inet ' | awk '{print $4}'`
               mac=`ip link sh dev ${phy_dpdk_int} | grep link/ether|awk '{print $2}' | tr -d ' '`
               # install vrouter packages and prepare configs
+
               if [[ ${contrail_repo} ]]; then
                 yum install -y \
                   contrail-vrouter-utils \
@@ -394,9 +415,34 @@ resources:
                 fi
               fi
             fi
+
+            ## if role is sriov 
+            if [[ `cat /tmp/rolename |awk -F"-" '{print $2}'` == "sriov" ]]; then
+
+              ## contrail-vrouter-agent needed ? 
+              if [[ ${contrail_repo} ]]; then
+                yum install -y contrail-vrouter-utils
+              fi
+
+            # Configure tuned profile
+              tuned_conf_path="/etc/tuned/cpu-partitioning-variables.conf"
+              if [ -n "$tuned_cores" ]; then
+                grep -q "^isolated_cores" $tuned_conf_path
+                if [ "$?" -eq 0 ]; then
+                  sed -i 's/^isolated_cores=.*/isolated_cores=$tuned_cores/' $tuned_conf_path
+                else
+                  echo "isolated_cores=$tuned_cores" >> $tuned_conf_path
+                fi
+                tuned-adm profile cpu-partitioning
+              fi 
+              sed 's/^\(GRUB_CMDLINE_LINUX=".*\)"/\1 $kernel_args isolcpus=$tuned_cores"/g' -i /etc/default/grub ;
+              grub2-mkconfig -o /etc/grub2.cfg
+              
+            fi 
             echo finishing...
             ifconfig
             ip route
+            reboot
           params:
             $phy_int: {get_param: VrouterPhysicalInterface}
             $phy_dpdk_int: {get_param: VrouterDpdkPhysicalInterface}
@@ -422,6 +468,8 @@ resources:
             $dpdk_hugepages: {get_param: ContrailDpdkHugePages}
             $dpdk_coremask: {get_param: ContrailDpdkCoremask}
             $dpdk_driver: {get_param: ContrailDpdkDriver}
+            $kernel_args: {get_param: ComputeKernelArgs}
+            $tuned_cores: {get_param: HostIsolatedCoreList}
 
 outputs:
   # This means get_resource from the parent template will get the userdata, see:
