--- a/environments/contrail/contrail-net.yaml
+++ b/environments/contrail/contrail-net.yaml
@@ -7,7 +7,7 @@ resource_registry:
   OS::TripleO::ContrailAnalytics::Net::SoftwareConfig: contrail-nic-config.yaml
   OS::TripleO::ContrailAnalyticsDatabase::Net::SoftwareConfig: contrail-nic-config.yaml
   OS::TripleO::ContrailTsn::Net::SoftwareConfig: contrail-nic-config-compute.yaml
-  OS::TripleO::NodeExtraConfigPost: post-install-cpu-tuning.yaml
+  OS::TripleO::NodeExtraConfigPost: post-install.yaml
 
 parameter_defaults:
   ControlPlaneSubnetCidr: '24'
@@ -55,53 +55,58 @@ parameter_defaults:
 ##########################
 # SR-IOV configuration   #
 ##########################
-# The mechanism drivers for the Neutron tenant network.
+ # Role based specific parameters [Role: ComputeSriov / defined in roles_data.yaml]
+ # https://docs.openstack.org/tripleo-docs/latest/install/advanced_deployment/role_specific_parameters.html 
+ ComputeSriovParameters: 
 
-NeutronMechanismDrivers: "openvswitch,sriovnicswitch"
-  # List of PCI Passthrough whitelist parameters.
-  # Use ONE of the following examples.
-  # Example 1:
-  # NovaPCIPassthrough:
-  #   - vendor_id: "8086"
-  #     product_id: "154c"
-  #     address: "0000:05:00.0" - (optional)
-  #     physical_network: "datacentre"
-  #
-  # Example 2:
-  # NovaPCIPassthrough:
-  #   - devname: "p6p1"
-  #     physical_network: "tenant"
-NovaPCIPassthrough:
-  - devname: "ens2f1"
-    physical_network: "tenant"
-    # List of supported pci vendor devices in the format VendorID:ProductID.
-#NeutronSupportedPCIVendorDevs: ['8086:154d', '8086:10ed'] 
-#removed in ocata
-#https://github.com/openstack/tripleo-heat-templates/commit/1301745eb99004e725866d00ec3d6d64996e8080#diff-b714354f4ff0880d967ad7cb43923f39
-# List of <physical_network>:<physical device>
-# All physical networks listed in network_vlan_ranges on the server
-# should have mappings to appropriate interfaces on each agent.
-NeutronPhysicalDevMappings: "tenant:ens2f1"
-# Provide the list of VFs to be reserved for each SR-IOV interface.
-# Format "<interface_name1>:<numvfs1>","<interface_name2>:<numvfs2>"
-# Example "eth1:4096","eth2:128"
-  NeutronSriovNumVFs: "ens2f1:5"
+    # contrail - not necessary 
+    # The mechanism drivers for the Neutron tenant network.
+    #NeutronMechanismDrivers: "openvswitch,sriovnicswitch"
+      # List of PCI Passthrough whitelist parameters.
+      # Use ONE of the following examples.
+      # Example 1:
+      # NovaPCIPassthrough:
+      #   - vendor_id: "8086"
+      #     product_id: "154c"
+      #     address: "0000:05:00.0" - (optional)
+      #     physical_network: "datacentre"
+      #
+      # Example 2:
+      # NovaPCIPassthrough:
+      #   - devname: "p6p1"
+      #     physical_network: "tenant"
+    NovaPCIPassthrough:
+      - devname: "ens2f1"
+        physical_network: "tenant"
+        # List of supported pci vendor devices in the format VendorID:ProductID.
+    #NeutronSupportedPCIVendorDevs: ['8086:154d', '8086:10ed'] 
+    #removed in ocata
+    #https://github.com/openstack/tripleo-heat-templates/commit/1301745eb99004e725866d00ec3d6d64996e8080#diff-b714354f4ff0880d967ad7cb43923f39
+    # List of <physical_network>:<physical device>
+    # All physical networks listed in network_vlan_ranges on the server
+    # should have mappings to appropriate interfaces on each agent.
+    NeutronPhysicalDevMappings: "tenant:ens2f1"
+    # Provide the list of VFs to be reserved for each SR-IOV interface.
+    # Format "<interface_name1>:<numvfs1>","<interface_name2>:<numvfs2>"
+    # Example "eth1:4096","eth2:128"
+      NeutronSriovNumVFs: "ens2f1:5"
 
-  ##########################
-  # Additional config      #
-  ##########################
-  # List of scheduler available filters
-  NovaSchedulerAvailableFilters: ["nova.scheduler.filters.all_filters","nova.scheduler.filters.pci_passthrough_filter.PciPassthroughFilter"]
-  # An array of filters used by Nova to filter a node.These filters will be applied in the order they are listed,
-  # so place your most restrictive filters first to make the filtering process more efficient.
-  NovaSchedulerDefaultFilters: ['AvailabilityZoneFilter','RamFilter','ComputeFilter','ComputeCapabilitiesFilter','ImagePropertiesFilter','ServerGroupAntiAffinityFilter','ServerGroupAffinityFilter','PciPassthroughFilter','NUMATopologyFilter']
-  # Reserved RAM for host processes
-  NovaReservedHostMemory: 2048
-  # A list or range of physical CPU cores to reserve for virtual machine processes.
-  # Example: NovaVcpuPinSet: ['4-12','^8'] will reserve cores from 4-12 excluding 8
-  NovaVcpuPinSet: "1,2,3,4,5,6,7,9,10,17,18,19,20,21,22,23,11,12,13,14,15,25,26,27,28,29,30,31"
-  # Kernel arguments for Compute node
-  ComputeKernelArgs: "default_hugepagesz=1GB hugepagesz=1G hugepages=32 iommu=pt intel_iommu=on"
-  # A list or range of physical CPU cores to be tuned.
-  # The given args will be appended to the tuned cpu-partitioning profile.
-  HostIsolatedCoreList: "1,2,3,4,5,6,7,9,10,17,18,19,20,21,22,23,11,12,13,14,15,25,26,27,28,29,30,31"
+      ##########################
+      # Additional config      #
+      ##########################
+      # List of scheduler available filters
+      NovaSchedulerAvailableFilters: ["nova.scheduler.filters.all_filters","nova.scheduler.filters.pci_passthrough_filter.PciPassthroughFilter"]
+      # An array of filters used by Nova to filter a node.These filters will be applied in the order they are listed,
+      # so place your most restrictive filters first to make the filtering process more efficient.
+      NovaSchedulerDefaultFilters: ['AvailabilityZoneFilter','RamFilter','ComputeFilter','ComputeCapabilitiesFilter','ImagePropertiesFilter','ServerGroupAntiAffinityFilter','ServerGroupAffinityFilter','PciPassthroughFilter','NUMATopologyFilter']
+      # Reserved RAM for host processes
+      NovaReservedHostMemory: 2048
+      # A list or range of physical CPU cores to reserve for virtual machine processes.
+      # Example: NovaVcpuPinSet: ['4-12','^8'] will reserve cores from 4-12 excluding 8
+      NovaVcpuPinSet: "1,2,3,4,5,6,7,9,10,17,18,19,20,21,22,23,11,12,13,14,15,25,26,27,28,29,30,31"
+      # Kernel arguments for Compute node
+      ComputeKernelArgs: "default_hugepagesz=1GB hugepagesz=1G hugepages=32 iommu=pt intel_iommu=on"
+      # A list or range of physical CPU cores to be tuned.
+      # The given args will be appended to the tuned cpu-partitioning profile.
+      HostIsolatedCoreList: "1,2,3,4,5,6,7,9,10,17,18,19,20,21,22,23,11,12,13,14,15,25,26,27,28,29,30,31"
+
